# chibicaml

./: .gitignore  README.md  chibic.opam  dune-project
lib/: codegen.ml  codegen.mli  compiler.ml  dune  error.ml  extensions.ml  lexer.ml  node.ml  node.mli  parser.ml  parser.mli  token.ml  token.mli  type.ml  type.mli
test/: arithmetic.ml  arrays.ml  chibic.t  comparison.ml  dune  functionDecls.ml  functions.ml  helpers.ml  literals.ml  pointers.ml  sizeof.ml  statements.ml  variables.ml
test/scripts/: runcode.sh
